--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "del": "^3.0.0",
     "denodeify": "^1.2.1",
+    "gifsicle": "^4.0.1",
     "glob": "^7.1.3",
     "mkdirp": "^0.5.1",
     "sharp": "^0.21.1"
